moving some stuff
WIP slo testability

WIP breaking everything

wip integration testing

the great slo purge

update mocks

Remove old/unused test code to fix integration test failures

fix tests

enhance SLO validation

lint fixes

window improvements

WIP MWMB alerts

fix filters

metrics store mocked tests

fix lint fix build

basic prometheus SLO integration tests

metric SLO discovery integration test

add list datasource API

prometheus unmarshalling enhancements

add MWMB Alerts to prometheus generator

update interface

update tests

consistently name imports

stuff

increase cortex reachable timeout

--- a/pkg/test/mock/mockgen.yaml
+++ b/pkg/test/mock/mockgen.yaml
@@ -50,3 +50,16 @@ mocks:
     dest: pkg/test/mock/update/update.go
     types:
       - UpdateTypeHandler
+  - source: plugins/metrics/apis/cortexadmin/cortexadmin_grpc.pb.go
+    dest: pkg/test/mock/cortexadmin/cortexadmin.go
+    types:
+      - CortexAdminClient
+  - source: pkg/slo/backend/service.go
+    dest: pkg/test/mock/slo/service.go
+    types:
+      - ServiceBackend
+  - source: pkg/slo/backend/store.go
+    dest : pkg/test/mock/slo/store.go
+    types:
+      - SLOStore
+
