--- a/dagger/ci/defaults.toml
+++ b/dagger/ci/defaults.toml
@@ -26,7 +26,7 @@ test = true
 [images.opensearch.build]
 	dashboards-version = "2.8.0"
 	opensearch-version = "2.8.0"
-	plugin-version = "0.11.1"
+	plugin-version = "0.11.2-rc1"
 
 [images.opensearch.dashboards]
 	repo = "docker.io/rancher/opensearch-dashboards"
