Make kubeAuditLogsSpec follow rancher-logging pattern
Signed-off-by: Joao Henri <joao.henri@suse.com>

--- a/config/crd/bases/logging.opni.io_collectorconfigs.yaml
+++ b/config/crd/bases/logging.opni.io_collectorconfigs.yaml
@@ -41,9 +41,11 @@ spec:
                 type: object
               kubeAuditLogs:
                 properties:
+                  auditFilename:
+                    type: string
                   enabled:
                     type: boolean
-                  logPath:
+                  pathPrefix:
                     type: string
                 type: object
               provider:
