--- a/config/crd/bases/monitoring.opni.io_rolebindings.yaml
+++ b/config/crd/bases/monitoring.opni.io_rolebindings.yaml
@@ -30,15 +30,17 @@ spec:
                 type: string
               metadata:
                 properties:
+                  capability:
+                    type: string
                   resourceVersion:
                     type: string
                 type: object
-              roleId:
-                type: string
-              subjects:
+              roleIds:
                 items:
                   type: string
                 type: array
+              subject:
+                type: string
               taints:
                 items:
                   type: string
