Update tests and settings

--- a/config/crd/bases/monitoring.opni.io_rolebindings.yaml
+++ b/config/crd/bases/monitoring.opni.io_rolebindings.yaml
@@ -35,12 +35,12 @@ spec:
                   resourceVersion:
                     type: string
                 type: object
-              roleIds:
+              roleId:
+                type: string
+              subjects:
                 items:
                   type: string
                 type: array
-              subject:
-                type: string
               taints:
                 items:
                   type: string
