--- a/config/crd/bases/core.opni.io_collectors.yaml
+++ b/config/crd/bases/core.opni.io_collectors.yaml
@@ -69,6 +69,11 @@ spec:
                     type: string
                 type: object
                 x-kubernetes-map-type: atomic
+              otel:
+                properties:
+                  batch: {}
+                  memoryLimiter: {}
+                type: object
               systemNamespace:
                 type: string
             type: object
